<resources>
    <string name="app_name">Accounts List</string>
    <string name="app_name_corpname">" Accounts by Corporation Name"</string>
    <string name="app_name_opendate">" Accounts by Open Date, descending"</string>
    <string name="app_name_acctid">" Accounts by Account Id"</string>
    <string name="app_name_custom"> Accounts by Custom Seq</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="menu_accounts">Accounts List</string>
    <string name="menu_suggests">Suggested Passwords</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_generate">Generate Passwords</string>
    <string name="menu_generate10">Generate 10 Char Passwords</string>
    <string name="menu_generate8">Generate 8 Char Passwords</string>
    <string name="edit_description_description">Button to edit passwords</string>
    <string name="delete_button_description">Button to delete password</string>
    <string name="edit_button_description">Edit password text</string>
    <string name="generate_passwords_instruction">Request Password Generate from plus on menu</string>
    <string name="corp_website_hint">Valid corp website (optional)</string>
    <string name="title_activity_account">Account Edit</string>
    <string name="menu_add_account">Add an account</string>
    <string name="title_activity_launch">Launch Activity</string>
    <string name="title_activity_no_launch">No Launch Activity</string>
    <string name="title_activity_account_list">Accounts</string>
    <string name="title_activity_suggest_list">Password Suggestions</string>
    <string name="title_activity_suggest_add">Password Suggestion Add</string>
    <string name="home_btn_accounts_text">Accounts List</string>
    <string name="home_btn_suggest_text">Suggestions List</string>
    <string name="home_instruction_tex">Click function</string>
    <string name="home_btn_add_account_text">Add an account</string>
    <string name="up_button_description">Up item on list</string>
    <string name="down_button_description">Down item on list</string>
    <string name="home_btn_accounts_by_open_text">Accounts List, sorted by Open Date</string>
    <string name="home_btn_import_text">Import Accounts from a prior export</string>
    <string name="home_btn_export_text">Export Accounts</string>
    <string name="home_btn_search_text">Search Accounts</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_file_view">File View Activity</string>
    <string name="title_activity_about">About Activity</string>
    <string name="listdiag_acc_message">Select account action</string>
    <string name="listdiag_acc_sub_message">Choose with click</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="srch_load_search_db">Load Search DB with accounts</string>
    <string name="srch_value_hint">Enter value to search</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Enter Corporate Name (or partial) to search</string>
    <string name="settings_description">My Accounts</string>
    <string name="title_activity_search_list" translatable="false">SearchListActivity</string>
    <string name="searchable_hint">Enter corporation name</string>
    <string name="home_message_title">List Accounts, Search Accounts, Password Suggestions</string>
    <string name="home_message_text_1">Track your accounts with sorted lists, searches, edits, backup/restore, or generate suggested passwords.
    \n\n Change password order by press and hold a item password, then move it to a new position . Exception is it can not move to the end. A future upgrade will resolve this. To put at the end, move to the end, just before the last item, then pull the last item forward.
    \n\nOn the paper list of passwords, reference them by Account Id, shown on the account edit info.</string>
    <string name="home_message_text_2">To view list in a different order, click the filter icon for three different sorted orders. Use the search menu request to see only accounts with searched for corporation names.</string>
    <string name="home_message_text_3">Click on an account item to view and edit account details. To delete, swipe account left or right. To add an account, click plus sign at lower right corner.</string>
    <string name="home_message_text_4">"One of the four ordered lists is a custom ordered list. Order is arranged by the user. This is a way to keep more important accounts to the top of the list. Rearrange items by a drag/drop of an item.     "</string>
    <string name="home_message_text_5">"This drag/drop feature is only available in the Custom Sort list.     "</string>
    <string name="home_message_text_6">"Hint: To drag/drop, press and hold momentarily until color is changed indicating drag is started, then drag to the new position.     "</string>
    <string name="home_message_text_7">"To backup or restore use the Backup/Restore from the menu. This backups data. If a backup exists from a previous backup, this can be used to restore.     "</string>
    <string name="home_message_text_8">"The file location is noted in the Backup/Restore menu item Filename. Use menu item 'Show Backup File' to view of this previously exported file. Use the menu item share to copy the exported file onto other systems."</string>
    <string name="home_message_text_9">"Password Suggestions menu list passwords. Menu Generate returns 10 passwords. Passwords are either 8 or 10 character size, depending on user request. These passwords contain one number, one symbol, one capital letter. The letters of passwords are selected based on the location on keyboard, either from left-hand or right-hand.     "</string>
    <string name="home_message_text_10">"This location arrangement assists by allowing user to key in password with only one hand. Although, numbers and symbols are at random.     "</string>
    <string name="home_message_text_11">"Add, edit, or rearrange password items of the list is similar to accounts maintenance. Passwords do not attach to an account. Reason why is explained next.     "</string>
    <string name="home_message_text_12">"Private Account Passwords Secrecy"</string>
    <string name="home_message_text_13">"Keeping passwords electronically, even if encrypted, may leave you open to have your credentials stolen. Having an electronic copy (from a file or the apps database) with the credentials of company, user name, and password would highly exposed your accounts to hackers.     "</string>
    <string name="home_message_text_14">"The data db contains accounts with account Id and account info. Use paper to record the db's account Id and password assigned.     "</string>
    <string name="home_message_text_15">"Add an account on the app, then take the auto-generated id and its newly selected password onto the paper report.     "</string>
    <string name="home_message_text_16">"Later when an account it needed, couple account and password by doing a search on the app for the account. Use the account id to reference into paper report for the password. The account ids are incremented, therefore the paper report is added in order of the account id.     "</string>
    <string name="home_message_text_17">"Account Protection     "</string>
    <string name="home_message_text_18">"Export data db through 'Backup / Restore' menu item for Backup. This exported data file is a Json file representation of accounts db. Use this for backup.     "</string>
    <string name="home_message_text_19">"To use this app on another device, install this app; copy shared backup to file location, shown on menu; select Menu item Restore to populate the data. Use the menu item Share to keep them in sync.     "</string>
    <string name="home_message_text_20">"Recommend to share export data file to Dropbox or Email. Copy onto a safe space, separate from the paper report. Note: Suggested passwords are not backed up.     "</string>
    <string name="home_message_text_21">"APP Security"</string>
    <string name="home_message_text_22">"Android has recently made a change to make our systems safer. To allow an app access to external storage, set allow storage in Settings for Apps.     "</string>
    <string name="home_message_text_23">"Select this Accounts app to give permission for storage."</string>
    <string name="home_message_text_24">"Special Note"</string>
    <string name="home_message_text_25">"If this app is uninstalled, its backup data is deleted with the install. To preserve, copy to another space or share from Share Menu"</string>
    <string name="menu_search">Search Accounts</string>
    <string name="menu_showdate">Date</string>
    <string name="menu_save">Save</string>
    <string name="title_activity_web_view">Webview Activity</string>
    <string name="title_activity_addedit_profile">Add Edit Profile Activity</string>
    <string name="title_activity_search_profile" translatable="false">SearchProfileActivity</string>
    <string name="delete_cap">Delete</string>
    <string name="edit_acct_btn_hint">Edit Account</string>
    <string name="acct_show_website">Show Website</string>
    <string name="menu_link_internet">Link to Internet</string>
    <string name="menuacct_sort">Sort by</string>
    <string name="menuacct_sort_corpname">Sort by Corporate Name</string>
    <string name="menuacct_sort_opendate">Sort by Open Date</string>
    <string name="menuacct_sort_passport">Sort by Account Id</string>
    <string name="menuacct_sort_custom">Custom Sort</string>
    <string name="menuacct_backup_restore_accts">Backup / Restore</string>
    <string name="menuacct_external_accts">External accounts</string>
    <string name="menuacct_search">Search</string>
    <string name="menuacct_about">About</string>
    <string name="menuacct_notify">Notify</string>
    <string name="menuacct_dropbox">Dropbox</string>
    <string name="menuvw_show_file">Show Backup File</string>
    <string name="menuvw_show_filename">Filename</string>
    <string name="menuvw_share">Backup Accounts</string>
    <string name="menuvw_import">Import</string>
    <string name="menuvw_retore">Restore</string>
    <string name="menuvw_export">Export</string>
    <string name="menuvw_backup">Backup</string>
    <string name="about_copyright">Copyright © 2020</string>
    <string name="about_email">For support, email vonniekinsey@gmail.com</string>
    <string name="btn_open_date_label">Select Open Date</string>
    <string name="empty_list">Accounts List is empty</string>
    <string name="empty_list_subtitle">Select \'Add an account\' from menu</string>
    <string name="descr_save">Save account</string>
    <string name="hint_email">Enter Email</string>
    <string name="addedit_notes">Notes</string>
    <string name="addedit_email_hint">User email required</string>
    <string name="addedit_name_hint">Username (required)</string>
    <string name="addedit_corp_name_hint">Corporation name (required)</string>
    <string name="suggest_password_hint">Password</string>
    <string name="suggest_notes_hint">Note</string>
    <string name="acctlist_by_corp_name">By Corporate Name</string>
    <string name="acctlist_by_custom">By Custom Order</string>
    <string name="acctlist_by_open_date_descending">By Open Date, descending</string>
    <string name="acctlist_by_account_id">By Account Id</string>
    <string name="sugg_password">Password</string>
    <string name="menu_addedit_save">Save</string>
    <string name="menu_main_sort">Sort</string>
    <string name="menu_sugg_del_all">Delete all password suggestions</string>
    <string name="splInstr">To re-arrange, press an account, hold momentarily, then move to the new placement</string>
    <string name="add_a_new_account">Add a new account</string>
    <string name="list_of_accounts">List of Accounts</string>
</resources>