<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kinsey.passwords.MainActivity">
    <item
        android:title="@string/menu_add_account"
        android:orderInCategory="100"
        android:id="@+id/menumain_addAccount"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom" />
    <item
        android:title="@string/menu_accounts"
        android:orderInCategory="101"
        android:id="@+id/menumain_showAccounts"
        android:icon="@android:drawable/ic_menu_view" />
    <item
        android:title="@string/menu_suggests"
        android:orderInCategory="102"
        android:id="@+id/menumain_showSuggests"
        android:icon="@android:drawable/ic_secure" />
    <item
        android:id="@+id/menumain_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
