<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.kinsey.passwords.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/current_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/generate_passwords_instruction"
        android:text="@string/home_instruction_tex"
        android:textSize="22sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/home_btn_accounts"
        android:text="@string/home_btn_accounts_text"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/current_title"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/home_btn_add_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_accounts"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/home_btn_add_account_text" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/home_btn_suggests"
        android:text="@string/home_btn_suggest_text"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_add_account" />

</android.support.constraint.ConstraintLayout>
