<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kinsey.passwords.FileViewActivity">
    <!--<item-->
        <!--android:id="@+id/menu_item_share"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="Share"-->
        <!--app:showAsAction="ifRoom"-->
        <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />-->
    <item
        android:id="@+id/vw_show_file"
        android:orderInCategory="101"
        android:title="@string/menuvw_show_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/vw_import"
        android:orderInCategory="101"
        android:title="@string/menuvw_retore"
        app:showAsAction="never" />
    <item
        android:id="@+id/vw_export"
        android:orderInCategory="102"
        android:title="@string/menuvw_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/vw_filename"
        android:icon="@drawable/ic_action_document"
        android:orderInCategory="103"
        android:title="Filename"
        app:showAsAction="never" />
    <item
        android:id="@+id/vw_shared"
        android:orderInCategory="104"
        android:icon="@android:drawable/ic_menu_share"
        android:title="Share" />
</menu>
