<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tli_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:tag="@string/tag_portrait"
        android:text="Generated Passwords"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintRight_toLeftOf="@+id/acc_delete">

        <ImageButton
            android:id="@+id/tli_suggest_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/up_button_description"
            app:srcCompat="@android:drawable/arrow_up_float" />

        <ImageButton
            android:id="@+id/tli_suggest_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/down_button_description"
            app:srcCompat="@android:drawable/arrow_down_float" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/acc_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/delete_button_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</android.support.constraint.ConstraintLayout>