<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tli_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Generated Passwords"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/tli_acct_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/up_button_description"
        app:layout_constraintRight_toLeftOf="@+id/tli_acct_delete"
        app:layout_constraintTop_toTopOf="@+id/tli_acct_delete"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:id="@+id/tli_suggest_down"
        app:layout_constraintTop_toBottomOf="@+id/tli_acct_edit"
        app:layout_constraintBottom_toBottomOf="@+id/tli_acct_delete"
        app:layout_constraintRight_toLeftOf="@+id/tli_acct_delete"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tli_password"
        android:contentDescription="@string/down_button_description" />

    <ImageButton
        android:id="@+id/tli_acct_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/delete_button_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</android.support.constraint.ConstraintLayout>