<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--            android:layout_gravity="top|end"-->
    <!--            android:layout_marginTop="16dp"-->

    <!--android:layout_marginBottom="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp" />-->


    <!--<FrameLayout-->
    <!--android:id="@+id/frameLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->

    <!--<include layout="@layout/content_account_list" />-->
    <!--</FrameLayout>-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spl_instr">

        <TextView
            android:id="@+id/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/acctlist_by_corp_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold|italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/account_items_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/list_of_accounts"
            android:scrollbarSize="8dp"
            android:scrollbars="vertical" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/spl_instr"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/splInstr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/add_a_new_account"
        android:maxHeight="96dp"
        android:minWidth="96dp"
        app:backgroundTint="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/backgroundWhite"
        app:srcCompat="@drawable/ic_add_white" />

</androidx.constraintlayout.widget.ConstraintLayout>
